feat: add Azure costs to operations center
